--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
+    "@types/react-timeago": "^4.1.3",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
@@ -25,14 +26,17 @@
     "react-dom": "18.2.0",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
+    "react-timeago": "^7.1.0",
     "react-toastify": "^9.1.3",
     "reactflow": "^11.7.0",
     "swr": "^2.1.5",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.25",
+    "@types/uuid": "^9.0.1",
     "sass": "^1.62.0"
   }
 }
