--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "reactflow": "^11.7.0",
     "swr": "^2.1.5",
     "tailwindcss": "3.3.1",
+    "three": "^0.153.0",
+    "three-js": "^79.0.0",
     "typescript": "5.0.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.25",
+    "@types/three": "^0.152.1",
     "@types/uuid": "^9.0.1",
     "sass": "^1.62.0"
   }
