--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react-redux": "^7.1.25",
     "@types/three": "^0.152.1",
     "@types/uuid": "^9.0.1",
+    "eslint-config-prettier": "^8.8.0",
     "sass": "^1.62.0"
   }
 }
