--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,3 @@
 {
-  "extends": ["next/core-web-vitals", "next", "prettier"],
-  "rules": {
-    "no-unreachable": "error",
-    "no-unused-vars": "error"
-  }
+  "extends": ["next/core-web-vitals", "prettier"]
 }
